force-app/main/default/objects/NS_EmailToQueue__mdt/fields/Escalate_Based_On_Queue__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Based_On_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent the Case Owner from being updated during escalation.</description>
    <label>Escalate Based On Queue</label>
    <type>Checkbox</type>
</CustomField>