force-app/main/default/objects/NS_EmailToQueue__mdt/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Queue Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>